# py-apiens

./: .envrc  CHANGELOG.md  README.md  TODO.txt  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  tests.yml
apiens/: __init__.py  doc.py  errors.py  errors_default.py  exc.py  inspect.py  operations.py  signature.py  translate.py
apiens/crud/: __init__.py  crud_signals.py  crudbase.py  crudfields.py  crudparams.py  crudsettings.py  defs.py  exc.py  mixins.py
apiens/crud/base/: __init__.py  mixins.py  operation_base.py
apiens/crud/mutate/: __init__.py  mutate_api.py  mutate_base.py  mutate_returning_api.py  saves_custom_fields.py
apiens/crud/query/: __init__.py  query_api.py
apiens/di/: __init__.py  const.py  defs.py  exc.py  injector.py  markers.py
apiens/error/: __init__.py  base.py  exc.py
apiens/error/converting/: __init__.py  apiens.py  base.py  exception.py  jessiql.py  sqlalchemy.py
apiens/error/error_object/: __init__.py  pydantic.py  python.py  schema.graphql
apiens/for/: __init__.py
apiens/structure/: __init__.py  titled_enum.py
apiens/structure/error/: __init__.py  base.py  converting.py  error_object.graphql  error_object.py  exc.py  schema.py
apiens/structure/func/: __init__.py  decomarker.py  documented_errors.py  simple_function.py
apiens/testing/: __init__.py  network_gag.py  network_gag_conftest.py  object_match.py  recreate_tables.py  successful_mixin.py  unsorted.py
apiens/testing/model_match/: __init__.py  match.py  model_info.py  predicates.py  singledispatch_lambda.py  transform.py
apiens/testing/models_match/: match.py  model_info.py  predicates.py  singledispatch_lambda.py
apiens/testing/object_match/: __init__.py  check.py  dict_match.py  object_match.py  okok.py  parameter.py  unsorted.py
apiens/tools/: jwt_token.py  magic_symbol.py  named_exit_stack.py  shortid.py  titled_enum.py  translate.py
apiens/util/: __init__.py  decomarker.py  documented_function.py  exception.py  magic_symbol.py  singledispatch.py
apiens/via/: __init__.py
misc/readme-app/: README.md
tests/: conftest.py  lib.py  test_api_ariadne.py  test_ariadne.py  test_cqrs_crud.py  test_crud.py  test_crud_ariadne.py  test_decomarker.py  test_di.py  test_doc.py  test_documented_errors.py  test_fastapi.py  test_fastapi_class_based_views.py  test_fastapi_exception_handlers.py  test_instance_history_proxy.py  test_models_match.py  test_network_gag.py  test_operation.py  test_pg_integrity_error.py  test_sa_session_tracking.py  test_sa_ssn_later.py  test_simple_function.py  test_tools_graphql.py  test_tools_pydantic.py
tests/crud/: test_crud.py  test_crud_ariadne.py
tests/error/: test_error_converting.py  test_error_exc.py
tests/lib/: query_logger.py
tests/structure/: test_documented_errors.py  test_simple_function.py  test_titled_enum.py
tests/testing/: test_model_match.py
tests/tools_ariadne/: test_tools_ariadne.py
tests/tools_fastapi/: test_tools_fastapi.py
tests/tools_graphql/: test_errors.py  test_graphql_directives.py  test_graphql_middleware.py  test_graphql_testing.py  test_resolver_marker.py  test_scalars.py
tests/tools_pydantic/: test_tools_pydantic.py
tests/tools_python/: test_python_lazy_init.py
tests/tools_settings/: test_mixins.py
tests/tools_sqlalchemy/: test_instance_history_proxy.py  test_postgres_integrity_error.py  test_sa_pg_integrity_error.py  test_sa_ssn_later.py  test_session_ssn_later.py  test_session_tracking.py
tests/tools_web/: test_jwt_token.py  test_web_shortid.py
tests/util/: test_util.py  test_util_decomarker.py  test_util_exception.py  test_util_magic_symbol.py
tests/views/: db.py  test_crud.py  test_instance_history_proxy.py
(+147 files in other folders)
