[tool.poetry]
name = "apiens"
version = "2.0.0"
description = ""
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-apiens'
include = ["jessiql/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.6.1"
docstring-parser = {version = "^0.10", optional = true}
fastapi = {version = ">= 0.61.1", optional = true}
SQLAlchemy = {version = "^1.3.1", optional = true}

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
mypy = "^0.910"
docstring-parser = "^0.10"
requests = "^2.26.0"

# jessiql = "^0.0.1"
jessiql = { path = "../py-jessiql/", develop = true }  # TODO: remove!

pydantic = ">=1.6.0"
fastapi = ">=0.51.0"
graphql-core = ">=3.1.3"
SQLAlchemy = {extras = ["mypy"], version = "^1.3.1"}
psycopg2 = "^2.9.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests/",
]

# all markers: $ pytest --markers
markers = [
    'extra: optional tests (mypy, etc)'
]
