[tool.poetry]
name = "apiens"
version = "2.0.0"
description = ""
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-apiens'
include = ["apiens/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
docstring-parser = {version = ">= 0.10", optional = true}
pydantic = {version = ">= 1.7", optional = true}
fastapi = {version = ">= 0.69.0", optional = true}
SQLAlchemy = {version = ">= 1.3.1", optional = true}
graphql-core = {version = ">= 3.1.0", optional = true}
ariadne = {version = ">= 0.13.0", optional = true}
pytz = {version = ">= 2020.1", optional = true}
python-jose = {version = ">= 1.0.0", optional = true}

[tool.poetry.dev-dependencies]
nox = ">=2020.8.22"
pytest = ">=6.0.1"
pytest-cov = ">=2.10.1"
mypy = ">=0.910"
docstring-parser = ">=0.10"
requests = ">=2.26.0"
pydantic = ">=1.7.0"
fastapi = ">=0.59.0"
graphql-core = ">=3.0.0"
ariadne = ">=0.13.0"
SQLAlchemy = {extras = ["mypy"], version = ">= 1.3.1"}
psycopg2 = ">=2.9.1"
types-psycopg2 = ">=2.9.6"
pytz = ">= 2022.1"
pytest-asyncio = ">= 0.18.3"
python-jose = ">= 3.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests/",
]

# all markers: $ pytest --markers
markers = [
    'extra: optional tests (mypy, etc)',
    'makes_real_network_connections: The test makes connections to real hosts in the Internet',
]
